--- a/WildVote/package.json
+++ b/WildVote/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.1",
+    "@ngneat/hot-toast": "^7.0.0",
     "@tensorflow/tfjs-core": "^4.17.0",
     "express": "^4.18.2",
     "face-api.js": "^0.22.2",
